--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "api-dolar",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Api para cotação em tempo real da moeda Dolar",
+  "author": "Marcus Miguel",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -23,10 +23,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.6.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "pg": "^8.11.5",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
